fix: improved pom to reduce warnings coming from JavaFX and added target folder to gitignore